<resources>
    <string name="app_name">Smart Flower Pot</string>
    <string name="fab_content_description_text">Add plant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_reading">No reading</string>
    <string name="settings_title">Settings</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="temperature_units">Temperature units:</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="region">Region</string>
    <string name="gender">Gender</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="logout">Logout</string>
    <string name="device_identifier">Device identifier</string>
    <string name="nickname">Nickname</string>
    <string name="type">Type</string>
    <string name="create_a_plant">Create a plant</string>
    <string name="no_friends_label">No friends</string>
    <string name="no_plants_label">You have no plants created</string>
    <string name="temperature">Temperature -</string>
    <string name="humidity">Humidity -</string>
    <string name="co2">CO2 -</string>
    <string name="light">Light -</string>
    <string name="date_of_plantation">Date of plantation -</string>
    <string name="dash">-</string>
    <string name="day_s_ago">day/s ago</string>
    <string name="last_week_statistics">Last Week Statistics:</string>
    <string name="temperature_c">Temperature (°C)</string>
    <string name="humidity_label">Humidity (%)</string>
    <string name="co2_ppm">CO2 (PPM)</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register now!</string>
    <string name="plant_name">Plant name</string>
    <string name="device_identifier">Device identifier</string>
    <string name="register">Register</string>
    <string name="overview">Overview</string>
    <string name="account">Account</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
</resources>